--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Hello World</title>
+    <script src="dist/react.js" type="text/javascript"></script>
+    <script src="dist/react-dom.js" type="text/javascript"></script>
   </head>
   <body> 
   <div id="container"></div>
